<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/>
    </parent>

    <groupId>com.bytequay</groupId>
    <artifactId>backend</artifactId>
    <version>0.2.0</version>
    <name>bytequay-backend</name>
    <description>Local sidecar for the ByteQuay macOS app</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.3.1-jre</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- SQLite — embedded, no server required -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.47.1.0</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Hibernate dialect for SQLite (part of hibernate-community-dialects) -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>2.0.3</version>
        </dependency>

        <!-- Angus Mail's Gmail-IMAP provider — exposes the X-GM-* extensions
             (X-GM-THRID, X-GM-MSGID, X-GM-LABELS) that we group threads on
             in GmailImapClient. The slim jakarta.mail jar above bundles
             imap/pop3/smtp but not gimap. -->
        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>gimap</artifactId>
            <version>2.0.3</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>bytequay-backend</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.bytequay.app.ByteQuayApplication</mainClass>
                </configuration>
            </plugin>

            <!-- Checkstyle — Trino's airbase rules verbatim
                 (src/main/checkstyle/checks.xml). Runs on the validate phase
                 so style errors fail the build before compile. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <configLocation>${project.basedir}/src/main/checkstyle/checks.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <failOnViolation>true</failOnViolation>
                    <consoleOutput>true</consoleOutput>
                    <linkXRef>false</linkXRef>
                    <excludes>**/module-info.java</excludes>
                </configuration>
                <dependencies>
                    <!-- Match Trino/airbase pinning. 13.x is required for
                         the HexLiteralCase + RegexpMultiline features used
                         in checks.xml. -->
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>13.4.1</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>checkstyle</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Error Prone — Google's static analyzer attached to the
                 compiler. Same .mvn/errorprone.config Trino uses (curated
                 -Xep flags). Runs on every compile so issues are caught
                 at build time. The JVM add-exports/add-opens args are
                 required by errorprone on Java 16+ to access compiler
                 internals. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-XDcompilePolicy=simple</arg>
                        <arg>--should-stop=ifError=FLOW</arg>
                        <!-- Required by Error Prone 2.31+ on JDK 21 to keep
                             type-annotation symbols around long enough for
                             its analyzers. Silently accepted on newer JDKs. -->
                        <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
                        <arg>-Xplugin:ErrorProne @${project.basedir}/.mvn/errorprone.config -XepExcludedPaths:.*/target/generated-(|test-)sources/.*</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.errorprone</groupId>
                            <artifactId>error_prone_core</artifactId>
                            <version>2.49.0</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- License header check — replaces the bash grep that lived in
                 .github/workflows/ci.yml. Verifies every src/**/*.java starts
                 with the Apache 2.0 header stored at /licenses/header.txt
                 (one repo-wide source of truth shared with the frontend's
                 eslint-plugin-header rule). -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.5</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>${project.basedir}/../licenses/header.txt</header>
                            <includes>
                                <include>src/main/java/**/*.java</include>
                                <include>src/test/java/**/*.java</include>
                            </includes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
                <executions>
                    <execution>
                        <id>license-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
